--- a/public/css/login.css
+++ b/public/css/login.css
@@ -81,7 +81,9 @@ body{
     font-size: 0.9rem;
     font-family: 'Urbanist', sans-serif;
     font-weight: 400;
-    color: var(--color-gray);
+    background: linear-gradient(2.92deg, #fb17f8,#fdc70c);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .errDivContainer{
@@ -181,19 +183,21 @@ body{
 .create__account{
     display: flex;
     margin-top: 24px;
+    gap: 4px;
     align-items: center;
 }
 
 .create__account p{
     display: flex;
-    gap: 4px;
     font-family: 'Urbanist';
     font-weight: 500;
-    color: var(--color-gray);
+    background: linear-gradient(2.92deg, #fb17f8,#fdc70c);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
     font-size: 0.9rem;
 }
 
-.create__account p a{
+.create__account a{
     font-family: 'Urbanist';
     color: var(--link-color);
     font-weight: 400;
@@ -201,7 +205,7 @@ body{
     text-decoration: none;
 }
 
-.create__account p a:hover{
+.create__account a:hover{
     text-decoration: underline;
 }
 
