--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -111,9 +111,7 @@
     font-family: 'Urbanist';
     font-size: 400;
     font-size: 0.9rem;
-    background: linear-gradient(2.92deg, #fb17f8,#fdc70c);
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
+    color: var(--color-gray);
 }
 
 
@@ -164,9 +162,7 @@
     font-size: 0.9rem;
     font-family: 'Urbanist', sans-serif;
     font-weight: 400;
-    background: linear-gradient(2.92deg, #fb17f8,#fdc70c);
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
+    color: var(--color-gray);
     text-align: center;
     
 }
